--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -8,7 +8,11 @@
       "extensions": [
         "vscode-icons-team.vscode-icons",
         "ms-vscode.cmake-tools",
-        "ms-vscode.cpptools-extension-pack"
+        "ms-vscode.cpptools-extension-pack",
+        "aaron-bond.better-comments",
+        "mhutchie.git-graph",
+        "VisualStudioExptTeam.vscodeintellicode-completions",
+         
       ]
     }
   },
