--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,c++,c,cmake,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,c++,c,cmake,macos
 
+.devcontainer
+
 ### C ###
 # Prerequisites
 *.d
